--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "astro": "astro",
     "format": "prettier --write ."
   },
-  "dependencies": {
+  "devDependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^9.0.0",
-    "@astrojs/tailwind": "^5.1.4",
-    "astro": "^5.1.1",
+    "@astrojs/node": "9.1.3",
+    "@astrojs/sitemap": "^3.3.0",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@tailwindcss/vite": "^4.0.17",
+    "astro": "5.5.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
-  },
-  "devDependencies": {
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.8.2"
   }
 }
